# ProcessManager

./: CMakeLists.txt
application/: CMakeLists.txt  ForeignProcessManager.h  Main.qml  ProcessView.qml  foreignprocesslistmodel.h  foreignprocessmodel.h  main.cpp  qmlprocessmanagersingleton.cpp  qmlprocessmanagersingleton.h  settings.ini
consoleApplication/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  processlistmodel.cpp  processlistmodel.h  processmanager.cpp  processmanager.h  processmodel.cpp  processmodel.h
quick/: CMakeLists.txt
